--- a/mortgages.Rmd
+++ b/mortgages.Rmd
@@ -32,13 +32,13 @@ source("functions.R")
 I was playing around with calculating the total cost of a mortgage, and I realized that for $\$700000$ home, you could easy pay $\$1.1$ million on a mortgage. Growing up my dad has always thought that renting is a waste of money, but this got me wondering if that's actually true. Could renting sometimes be a better financial choice than buying?
 
 ```{r, include=TRUE, echo=TRUE}
-# returns the monthly payment required to pay off the mortgage in the specified time (given in years)
+# returns monthly payment to pay off mortgage in the specified time (in years)
 # interest rate is annualized and downpayment is given as a percentage
 # assumes monthly interest accrual and payments
 payment <- function(principal=500000, rate=0.05, downpayment=0.05, time = 25) {
-  return((rate/12)*((1+rate/12)^(12*time))*(principal-downpayment*principal)/((1+rate/12)^(12*time)-1))
+  return((rate/12)*((1+rate/12)^(12*time))*
+           (principal-downpayment*principal)/((1+rate/12)^(12*time)-1))
 }
-
 300*payment(principal = 700000) # total cost of mortgage is over 1.1 million!!!
 ```
 
@@ -65,7 +65,7 @@ If the goal is to pay off the mortgage in $N$ periods, then setting $a_N=0$ yiel
 
 \[c=a_0\frac{r(1+r)^N}{(1+r)^N-1},\quad\quad\text{where $a_0$ is the principal}.\]
 
-## Vasicek and CIR Models
+## Vasicek and CIR models
 
 The Vasicek and CIR models use Stochastic Differential Equations to model interest rates. 
 
@@ -85,9 +85,9 @@ The CIR model is similar but volatility is also proportional to the square root 
 
 \[dr= \alpha(\theta-r)dt+\sigma \sqrt{r}dW.\]
 
-The CIR model is nice because at least analytically, as long as $2\alpha\theta > \sigma^2$ (Feller condition) then the rate will never be negative. This is because when $r$ becomes close to zero, the $\sqrt{r}$ term becomes very small and allows the drift term to dominate over the volatility term; pulling $r$ up. However, this does not work out so nicely in simulation due to errors introduced by discretization which can yield negative rates.
+The CIR model is nice because at least analytically, as long as $2\alpha\theta > \sigma^2$ (Feller condition) then the rate will never be negative. This is because when $r$ becomes close to zero, the $\sqrt{r}$ term becomes very small and allows the drift term to dominate over the volatility term; pulling $r$ up. However, this does not work out so nicely in simulation due to errors introduced by discretization which can result in negative rates.
 
-We can discretize the CIR model as follows (I believe this is called the Euler discretization scheme):
+We can discretize the CIR model as follows (Euler discretization scheme):
 
 \[r[t] = r[t-1] + \alpha(\theta - r[t-1])dt + \sigma\sqrt{r[t-1]}dW.\]
 
@@ -102,9 +102,9 @@ where $a=1-\alpha dt$, $b=\alpha\theta dt$ and $\varepsilon = \sigma dW$ so that
 
 ## Approach 1 - Generating plausible interest rates
 
-Rather than trying to make predictions about future interest rates from previous rates, what if we had access to the distribution of interest rate trajectories? Then we could check how often in this distribution is, for example, the total cost of mortgage more than double the principal?
+Rather than trying to make predictions about future interest rates from previous rates, what if we had access to the distribution of interest rate trajectories? Then we could check how often in this distribution is, for example, the total cost of a mortgage more than double the principal?
 
-In some sense we are trying to estimate the distribution of a vector in $\mathbb{R}^T$ where $T$ is the number of observations, and each component is likely highly correlated with each other. And all from a single observation! When I write it down like this it seems fruitless. When I first started this project I didn't have as clear an understanding of what I was doing. In any case here are the results of this first approach.
+In some sense we are trying to estimate the distribution of a vector in $\mathbb{R}^T$ where $T$ is the number of rates we have observed, and each component is likely highly correlated with each other. And all from a single observation! When I write it down like this it seems fruitless. When I first started this project I didn't have as clear an understanding of what I was doing. In any case here are the results of this first approach.
 
 I chose to use a CIR model to avoid negative interest rates. However, due to errors introduced by the discretization, I added a step of taking the absolute value. The function for simulating a CIR model is below.
 
@@ -120,7 +120,8 @@ cir <- function(alpha, theta, sigma, steps) {
   for (i in 2:steps) {
     dW <- rnorm(1, mean=0, sd=1) # generate random noise
     
-    r[i] <- abs(r[i-1] + alpha*(theta - r[i-1])*dt + sigma*sqrt(r[i-1])*dt*dW) # modified euler
+    r[i] <- abs(r[i-1] + alpha*(theta - r[i-1])*dt +      # modified euler
+                  sigma*sqrt(r[i-1])*dt*dW) 
   }
   
   return(r)
@@ -163,7 +164,7 @@ theta = b/(1 - a) # Speed of mean reversion
 sigma <- sqrt(MSE)/sqrt(dt) # Volatility
 ```
 
-There are two ways to calculate the Log-Likelihood for the CIR model both of which are implemented in the file `definitions.R`. The first involves the Bessel function, and the second involves Chi-Squared distribution.
+There are two ways to calculate the Log-Likelihood for the CIR model both of which are implemented in the file `functions.R`. The first involves the Bessel function, and the second involves Chi-Squared distribution.
 
 ```{r, echo=TRUE, include=TRUE}
 # Now refine the value of parameters with ML estimation
@@ -176,9 +177,6 @@ logLikelihood <- function(param) {
 }
 
 # optimize using optim()
-# for example call optim(c(alpha, theta, sigma), logLikelihood)
-# results for Canada overnight rate from January 1960 - March 2024 have been saved in cirParameters.csv
-
 MLE <- optim(c(alpha, theta, sigma), logLikelihood)$par
 ```
 
@@ -219,176 +217,182 @@ ggplot(data = trajectories, aes(time, value)) +
   theme_bw()
 ```
 
-What follows are different methods for predicting interest rates from previous observations.
+If the resulting samples do a good job of characterizing the true distribution of the interest rates, then I really like this approach. (This is something worth trying to prove yes or no).
+
+Another approach is to try and make predictions. Instead of thinking about the distribution of all possible trajectories, think about what the future interest rates will be given the current and previous ones.
+
+What follows are different methods for predicting interest rates from past rates.
 
 ## Approach 2 - Predicting interest rates with a linear model
 
 ## Approach 3 - Predicting interest rates with ______
 
-# Mortgaging vs Renting
+# Results of the various approaches
 
-Rather than simulating the rent prices over time which turned out to be difficult and requires lots more data than I had access to, I will simply check if renting is financially wiser than buying for many different rental rates. For each interest rate trajectory that I simulate, I will see how the cost of renting compares to mortgaging for a range of rental rates. I still needed to determine a base rental rate from which to calculate my range, this was a trickier problem than I thought it would be. 
+# Comparing mortgaging and renting
 
-The method I finally landed on was calculating what a fixed rate 25 year mortgage's monthly payment would be if you wanted to buy the house at the end of every lease term (usually the lease term is 1 year). What this monthly payment would be changes every year because interest rates vary, but don't forget that property values also increase. Which means the principal would be higher in each year. This needs to be accounted for - because rental rates don't vary semi-randomly like interest rates, instead they just increase over time. Two percent seemed like a reasonable annual appreciation value for property, so that's what I went with.
+<!-- Rather than simulating the rent prices over time which turned out to be difficult and requires lots more data than I had access to, I will simply check if renting is financially wiser than buying for many different rental rates. For each interest rate trajectory that I simulate, I will see how the cost of renting compares to mortgaging for a range of rental rates. I still needed to determine a base rental rate from which to calculate my range, this was a trickier problem than I thought it would be.  -->
 
-Lets go through a quick example. Let's say a house is bought in 1990 for \$500,000. To calculate what the base rent should be for this property, we use the interest rate in 1990 and the principal of \$500,000 to calculate what the monthly payment is on a fixed rate 25 year mortgage. If rent is any higher than this, then it's obvious that we might as well just buy. Then to find the range of potential rent values, we use ratios between say half and the full base rent For example we could increment by 0.1, then we would be checking rents of 0.5 the base rent, 0.6 the base rent, 0.7 the base rent, ..., the whole base rent. But don't forget we need to update the base rent every lease term (usually 1 year), and then re-calculate the range of rents. So in 1991, the property is expected to increase to \$510000 which we use as our new principal to calculate the new base rent. 
+<!-- The method I finally landed on was calculating what a fixed rate 25 year mortgage's monthly payment would be if you wanted to buy the house at the end of every lease term (usually the lease term is 1 year). What this monthly payment would be changes every year because interest rates vary, but don't forget that property values also increase. Which means the principal would be higher in each year. This needs to be accounted for - because rental rates don't vary semi-randomly like interest rates, instead they just increase over time. Two percent seemed like a reasonable annual appreciation value for property, so that's what I went with. -->
 
-In the end we will have a range of rents for each of the 25 years. And this is only for 1 interest rate trajectory! But with this information we can compare the cost of mortgaging to the cost of rent for this particular interest rate trajectory. If we do this for several simulated trajectories, we can see how often and by how much is mortgaging or renting better than the other financially.
+<!-- Lets go through a quick example. Let's say a house is bought in 1990 for \$500,000. To calculate what the base rent should be for this property, we use the interest rate in 1990 and the principal of \$500,000 to calculate what the monthly payment is on a fixed rate 25 year mortgage. If rent is any higher than this, then it's obvious that we might as well just buy. Then to find the range of potential rent values, we use ratios between say half and the full base rent For example we could increment by 0.1, then we would be checking rents of 0.5 the base rent, 0.6 the base rent, 0.7 the base rent, ..., the whole base rent. But don't forget we need to update the base rent every lease term (usually 1 year), and then re-calculate the range of rents. So in 1991, the property is expected to increase to \$510000 which we use as our new principal to calculate the new base rent.  -->
 
-```{r, include=TRUE, echo=TRUE}
-# principal = initial value of property
-# time = number of years for mortgage
-# rates = interest rate over time
-# investment_appreciation = annual appreciation of investment (i.e. stocks/bonds)
-# property_appreciation = annual appreciation of property value
-# lease_term = length of the lease term (i.e. how often should price of rent be updated)
-# step = step between ratios we test
-# 
-difference <- function(principal = 500000, time = 25, rates, investment_appreciation = 0.06, 
-                       property_appreciation = 0.02, lease_term = 12, step=0.1, max_ratio=1.2, 
-                       min_ratio=0.5) {
-  
-  n = time*12 # number of months
-  r = 1 + investment_appreciation/12 # monthly appreciation of investment
-  s = 1 + property_appreciation/12 # monthly appreciation of real estate
-  
-  # calculate the mortgage payments over time
-  var_payment = variable_payment(principal = principal, rates = rates, time=time)
-  # total cost of mortgage = sum of all the payments
-  mortgage_cost = sum(var_payment) 
-  
-  # get adjusted value of home over 25 years based on 2% appreciation per year
-  principal = rep(principal, n)
-  for (i in 1:n) {
-    principal[i] = principal[i]*s^(i-1) 
-  }
-  
-  # calculate the baseline rent for every lease term
-  # by finding what the fixed rate mortgage would be
-  # for adjusted property value
-  baseline_rent = payment(principal = principal, rate = rates, time = time) 
-  baseline_rent = baseline_rent[c(TRUE,rep(FALSE,lease_term - 1))]           
-  rep_baseline <- c()                                                       
-  for(w in 1:length(baseline_rent)) {
-    rep_baseline <- rbind(rep_baseline, rep(baseline_rent[w], lease_term))
-  }
-  
-  
-  m = (max_ratio - min_ratio)/step + 1 # m = number of different rents we test
-  result = vector(length = m)
-  
-  for (j in 1:m) {
-    rental_payment = rep_baseline*(min_ratio+step*(j-1)) # calculate monthly rent for each month
+<!-- In the end we will have a range of rents for each of the 25 years. And this is only for 1 interest rate trajectory! But with this information we can compare the cost of mortgaging to the cost of rent for this particular interest rate trajectory. If we do this for several simulated trajectories, we can see how often and by how much is mortgaging or renting better than the other financially. -->
 
-    # calculate how much money is made by investing what we would have payed towards the mortgage
-    investment_income = 0 
-    for (k in 1:n) {
-      investment_income = investment_income*r + var_payment[k] - rental_payment[k]
-    }
-    
-    # calculate the cost of the rental by taking sum of rent payments
-    # and subtracting profits from investment
-    rental_cost = sum(rental_payment) - investment_income  
-                                                          
-    result[j] = mortgage_cost - rental_cost
-  }
-  return(result)
-}
-```
+<!-- ```{r, include=TRUE, echo=TRUE} -->
+<!-- # principal = initial value of property -->
+<!-- # time = number of years for mortgage -->
+<!-- # rates = interest rate over time -->
+<!-- # investment_appreciation = annual appreciation of investment (i.e. stocks/bonds) -->
+<!-- # property_appreciation = annual appreciation of property value -->
+<!-- # lease_term = length of the lease term (i.e. how often should price of rent be updated) -->
+<!-- # step = step between ratios we test -->
+<!-- #  -->
+<!-- difference <- function(principal = 500000, time = 25, rates, investment_appreciation = 0.06,  -->
+<!--                        property_appreciation = 0.02, lease_term = 12, step=0.1, max_ratio=1.2,  -->
+<!--                        min_ratio=0.5) { -->
 
-Compare rentals to mortgages.
+<!--   n = time*12 # number of months -->
+<!--   r = 1 + investment_appreciation/12 # monthly appreciation of investment -->
+<!--   s = 1 + property_appreciation/12 # monthly appreciation of real estate -->
 
-```{r, include=TRUE, echo=TRUE, cache=TRUE}
+<!--   # calculate the mortgage payments over time -->
+<!--   var_payment = variable_payment(principal = principal, rates = rates, time=time) -->
+<!--   # total cost of mortgage = sum of all the payments -->
+<!--   mortgage_cost = sum(var_payment)  -->
 
-# Simulate the rates
-# Set number of simulation steps
-steps <- 300
+<!--   # get adjusted value of home over 25 years based on 2% appreciation per year -->
+<!--   principal = rep(principal, n) -->
+<!--   for (i in 1:n) { -->
+<!--     principal[i] = principal[i]*s^(i-1)  -->
+<!--   } -->
 
-# choose which parameters to use
-param <- MLE
+<!--   # calculate the baseline rent for every lease term -->
+<!--   # by finding what the fixed rate mortgage would be -->
+<!--   # for adjusted property value -->
+<!--   baseline_rent = payment(principal = principal, rate = rates, time = time)  -->
+<!--   baseline_rent = baseline_rent[c(TRUE,rep(FALSE,lease_term - 1))]            -->
+<!--   rep_baseline <- c()                                                        -->
+<!--   for(w in 1:length(baseline_rent)) { -->
+<!--     rep_baseline <- rbind(rep_baseline, rep(baseline_rent[w], lease_term)) -->
+<!--   } -->
 
-# Create time vector
-time <- 1:steps
 
-# Create data frame to store trajectories
-trajectories <- as.data.frame(c(time))
+<!--   m = (max_ratio - min_ratio)/step + 1 # m = number of different rents we test -->
+<!--   result = vector(length = m) -->
 
-# Choose how many simulated trajectories to generate 
-N <- 1000
+<!--   for (j in 1:m) { -->
+<!--     rental_payment = rep_baseline*(min_ratio+step*(j-1)) # calculate monthly rent for each month -->
 
-# Run loop to generate N different simulated trajectories
+<!--     # calculate how much money is made by investing what we would have payed towards the mortgage -->
+<!--     investment_income = 0  -->
+<!--     for (k in 1:n) { -->
+<!--       investment_income = investment_income*r + var_payment[k] - rental_payment[k] -->
+<!--     } -->
 
-for (i in 1:N) {
-  trajectories <- cbind(trajectories, cir(param[1], param[2], param[3], steps))
-}
-colnames(trajectories) <- c('time', paste("traj", 1:N, sep = "")) # rename columns
-trajectories$time <- NULL
+<!--     # calculate the cost of the rental by taking sum of rent payments -->
+<!--     # and subtracting profits from investment -->
+<!--     rental_cost = sum(rental_payment) - investment_income   -->
 
-step = 0.05
-max_ratio = 0.9
-min_ratio = 0.6
+<!--     result[j] = mortgage_cost - rental_cost -->
+<!--   } -->
+<!--   return(result) -->
+<!-- } -->
+<!-- ``` -->
 
-results <- data.frame(as.list(difference(principal=500000, rates = trajectories[,1], step = step, 
-                                         max_ratio = max_ratio, min_ratio = min_ratio)))
-for (i in 2:N) {
-  results[nrow(results) + 1, ] = difference(principal=500000, rates = trajectories[,i], step = step, 
-                                            max_ratio = max_ratio, min_ratio = min_ratio)
-}
-```
+<!-- Compare rentals to mortgages. -->
 
-Below is a plot showing the percentage of trajectories that favor rentals, and a plot showing the average difference in cost between renting and mortgaging. From this data, it looks like it makes the most sense to rent when the monthly rent is $0.6-0.7$ times what the monthly payment would be on a fixed rate mortgage. In this case you have a greater than $85\%$ chance of being better off renting. If the monthly rent is $0.7-0.8$ times the monthly payment, then it's hard to say which will be better financially. And for monthly rent $>0.8$ times the monthly payment it is better financially to buy. This assume that property appreciates at about $2\%$ per year. If that isn't the case for you, you can tweak the code and re-run to see how the results change. The more property appreciates, the worse it is for renters.
+<!-- ```{r, include=TRUE, echo=TRUE, cache=TRUE} -->
 
-```{r, include=TRUE, echo=TRUE}
-rent_ratios <- seq(min_ratio, max_ratio, step)
-colnames(results) <- rent_ratios
+<!-- # Simulate the rates -->
+<!-- # Set number of simulation steps -->
+<!-- steps <- 300 -->
 
-count_mat <- results > 0
-count_mat[,1] <- as.numeric(count_mat[,1])
-count <- colSums(count_mat)
-barplot(count/N, main='Mortgaging minus Renting', 
-        ylab = '% trajectories where cost mortgaging > cost renting', 
-        xlab = 'Rent Payment as a ratio of Monthly Payment', ylim=c(0,1))
-count/N
+<!-- # choose which parameters to use -->
+<!-- param <- MLE -->
 
-means <- colMeans(results)
-barplot(means, main="Mortgaging minus Renting", ylab="Average Cost Difference", 
-        xlab="Rent Payment as a ratio of Monthly Payment")
-means
-```
+<!-- # Create time vector -->
+<!-- time <- 1:steps -->
 
-From the bottom graph we can see that if rent is 0.65 times the monthly payment, the renter will have on average about $\$460000$ more than the mortgager at the end of twenty-five years. But this comparison ends at twenty-five years, after the mortgage is payed off the mortgager doesn't have any more monthly payments and could put much more money into an investment every year. But with a such a head start and due to the way interest compounds, the renter will still come out on top as you can see from the approximation of the situation below (this is only an approximation since the monthly injection doesn't change over time).
+<!-- # Create data frame to store trajectories -->
+<!-- trajectories <- as.data.frame(c(time)) -->
 
-```{r, include=TRUE, echo=TRUE}
-investment <- function(start = 0, injection, r = 1+0.06/12, n = 300) {
-  res = start
-  for(i in 1:n) {
-    res = res*r + injection
-  }
-  return(res)
-}
+<!-- # Choose how many simulated trajectories to generate  -->
+<!-- N <- 1000 -->
 
-investment(start = 460000, injection = 650) # renter
-investment(injection = 1000) # mortgager
-```
+<!-- # Run loop to generate N different simulated trajectories -->
 
-These number are derived for comparing the same property, which isn't realistic since you won't have the option to buy/rent the same property in the real world. However, you can use the rule above to compare two different properties as long as you're happy with either property.
+<!-- for (i in 1:N) { -->
+<!--   trajectories <- cbind(trajectories, cir(param[1], param[2], param[3], steps)) -->
+<!-- } -->
+<!-- colnames(trajectories) <- c('time', paste("traj", 1:N, sep = "")) # rename columns -->
+<!-- trajectories$time <- NULL -->
 
-You could use this data/method to answer lots of questions about rental pricing. For example, if you own a condo that you want to rent out you might want to know what you need to price your rental at so that you have a $>95\%$ chance to cover at least half of your monthly payment.
+<!-- step = 0.05 -->
+<!-- max_ratio = 0.9 -->
+<!-- min_ratio = 0.6 -->
 
-One thing that I didn't consider in my comparison was the appreciation of property value being added to the mortgager's net gains. I chose to ignore this because that money isn't actually accessible until you sell at which point you need to buy a new property which then ties up all or most of that money again.
+<!-- results <- data.frame(as.list(difference(principal=500000, rates = trajectories[,1], step = step,  -->
+<!--                                          max_ratio = max_ratio, min_ratio = min_ratio))) -->
+<!-- for (i in 2:N) { -->
+<!--   results[nrow(results) + 1, ] = difference(principal=500000, rates = trajectories[,i], step = step,  -->
+<!--                                             max_ratio = max_ratio, min_ratio = min_ratio) -->
+<!-- } -->
+<!-- ``` -->
+
+<!-- Below is a plot showing the percentage of trajectories that favor rentals, and a plot showing the average difference in cost between renting and mortgaging. From this data, it looks like it makes the most sense to rent when the monthly rent is $0.6-0.7$ times what the monthly payment would be on a fixed rate mortgage. In this case you have a greater than $85\%$ chance of being better off renting. If the monthly rent is $0.7-0.8$ times the monthly payment, then it's hard to say which will be better financially. And for monthly rent $>0.8$ times the monthly payment it is better financially to buy. This assume that property appreciates at about $2\%$ per year. If that isn't the case for you, you can tweak the code and re-run to see how the results change. The more property appreciates, the worse it is for renters. -->
+
+<!-- ```{r, include=TRUE, echo=TRUE} -->
+<!-- rent_ratios <- seq(min_ratio, max_ratio, step) -->
+<!-- colnames(results) <- rent_ratios -->
+
+<!-- count_mat <- results > 0 -->
+<!-- count_mat[,1] <- as.numeric(count_mat[,1]) -->
+<!-- count <- colSums(count_mat) -->
+<!-- barplot(count/N, main='Mortgaging minus Renting',  -->
+<!--         ylab = '% trajectories where cost mortgaging > cost renting',  -->
+<!--         xlab = 'Rent Payment as a ratio of Monthly Payment', ylim=c(0,1)) -->
+<!-- count/N -->
+
+<!-- means <- colMeans(results) -->
+<!-- barplot(means, main="Mortgaging minus Renting", ylab="Average Cost Difference",  -->
+<!--         xlab="Rent Payment as a ratio of Monthly Payment") -->
+<!-- means -->
+<!-- ``` -->
+
+<!-- From the bottom graph we can see that if rent is 0.65 times the monthly payment, the renter will have on average about $\$460000$ more than the mortgager at the end of twenty-five years. But this comparison ends at twenty-five years, after the mortgage is payed off the mortgager doesn't have any more monthly payments and could put much more money into an investment every year. But with a such a head start and due to the way interest compounds, the renter will still come out on top as you can see from the approximation of the situation below (this is only an approximation since the monthly injection doesn't change over time). -->
+
+<!-- ```{r, include=TRUE, echo=TRUE} -->
+<!-- investment <- function(start = 0, injection, r = 1+0.06/12, n = 300) { -->
+<!--   res = start -->
+<!--   for(i in 1:n) { -->
+<!--     res = res*r + injection -->
+<!--   } -->
+<!--   return(res) -->
+<!-- } -->
+
+<!-- investment(start = 460000, injection = 650) # renter -->
+<!-- investment(injection = 1000) # mortgager -->
+<!-- ``` -->
+
+<!-- These number are derived for comparing the same property, which isn't realistic since you won't have the option to buy/rent the same property in the real world. However, you can use the rule above to compare two different properties as long as you're happy with either property. -->
+
+<!-- You could use this data/method to answer lots of questions about rental pricing. For example, if you own a condo that you want to rent out you might want to know what you need to price your rental at so that you have a $>95\%$ chance to cover at least half of your monthly payment. -->
+
+<!-- One thing that I didn't consider in my comparison was the appreciation of property value being added to the mortgager's net gains. I chose to ignore this because that money isn't actually accessible until you sell at which point you need to buy a new property which then ties up all or most of that money again. -->
 
 # Conclusions
 
-This was an interesting project that taught me a lot. For one thing it made me realize that the forces that control the monthly payment on a mortgage are separate from the forces that control rental prices. The interest rates and initial property value (the principal) will inform a mortgage's monthly payment. Whereas the current property value informs the rental payment. So what this comes down to is, are you able to put enough towards an investment that appreciates faster than the property value in order to offset the loss of your rental payment? I also learned a little bit about stochastic differential equations to simulate interest rates. 
+<!-- This was an interesting project that taught me a lot. For one thing it made me realize that the forces that control the monthly payment on a mortgage are separate from the forces that control rental prices. The interest rates and initial property value (the principal) will inform a mortgage's monthly payment. Whereas the current property value informs the rental payment. So what this comes down to is, are you able to put enough towards an investment that appreciates faster than the property value in order to offset the loss of your rental payment? I also learned a little bit about stochastic differential equations to simulate interest rates.  -->
 
-I would also like to mention that this comparison is purely financial and assumes only one property. My guess is that if you are able to get your hands on multiple properties, that it then becomes better financially (but perhaps worse morally) to mortgage. This also doesn't consider the psychological security you could get from knowing that you own your home and not having to deal with the potential headache of a bad landlord/needing to move. 
+<!-- I would also like to mention that this comparison is purely financial and assumes only one property. My guess is that if you are able to get your hands on multiple properties, that it then becomes better financially (but perhaps worse morally) to mortgage. This also doesn't consider the psychological security you could get from knowing that you own your home and not having to deal with the potential headache of a bad landlord/needing to move.  -->
 
-Another assumption of this comparison is that the renter invests all of the excess money they would have put towards their monthly payment towards investments. For most renters this isn't the case. I have heard people say that renting can be just as good as buying, and from this analysis it actually seems like that is sometimes the case. But that's only true where the potential buyer has the financial capabilities to choose between buying and renting. Simply put, mortgaging is more expensive month-to-month than renting. If you have the baseline income to even consider buying a home, then you are already better off than most people who "choose" to rent. A renter would have to put between $40\%$ to $70\%$ ($0.3/0.7$ to $0.4/0.6$) of their monthly rent towards investments in order to out-earn the appreciation of the property they are living in (and they still need to actually pay the rent, so for renting to be better than mortgaging you can multiply the rent by a factor of about $1.5$ to get monthly cost of living). For most people, who don't have the excess money to invest, this analysis does not apply. What I am trying to get at is that just because renting can be financially better than mortgaging - **if you cannot afford to mortgage in the first place then you are still screwed**.
+<!-- Another assumption of this comparison is that the renter invests all of the excess money they would have put towards their monthly payment towards investments. For most renters this isn't the case. I have heard people say that renting can be just as good as buying, and from this analysis it actually seems like that is sometimes the case. But that's only true where the potential buyer has the financial capabilities to choose between buying and renting. Simply put, mortgaging is more expensive month-to-month than renting. If you have the baseline income to even consider buying a home, then you are already better off than most people who "choose" to rent. A renter would have to put between $40\%$ to $70\%$ ($0.3/0.7$ to $0.4/0.6$) of their monthly rent towards investments in order to out-earn the appreciation of the property they are living in (and they still need to actually pay the rent, so for renting to be better than mortgaging you can multiply the rent by a factor of about $1.5$ to get monthly cost of living). For most people, who don't have the excess money to invest, this analysis does not apply. What I am trying to get at is that just because renting can be financially better than mortgaging - **if you cannot afford to mortgage in the first place then you are still screwed**. -->
 
-A massive advantage of mortgaging if you have kids is that it gives you something to pass down. A mortgage essentially turns let's say approximately $\$1$ million of your dollars into $\$5-\$10$ million of your kid's dollars. And you don't even need all $\$1$ million at once, you can start with as little as $\$25000$ as a downpayment. Essentially, mortgaging gives you access to money (and thus wealth appreciation) that you otherwise wouldn't have had access to. This is an amazing way to improve your child's life over yours, in fact it's probably the best way since they essentially won't need to buy or rent for their home.
+<!-- A massive advantage of mortgaging if you have kids is that it gives you something to pass down. A mortgage essentially turns let's say approximately $\$1$ million of your dollars into $\$5-\$10$ million of your kid's dollars. And you don't even need all $\$1$ million at once, you can start with as little as $\$25000$ as a downpayment. Essentially, mortgaging gives you access to money (and thus wealth appreciation) that you otherwise wouldn't have had access to. This is an amazing way to improve your child's life over yours, in fact it's probably the best way since they essentially won't need to buy or rent for their home. -->
 
-The other thing to keep in mind is the location of most rentals which are dense cities. If you don't need to own a car for your day-to-day activities that is also a place where financial savings are made. Whereas if you live in the suburbs, a car is necessity for every day which adds to the cost of living. This isn't necessarily a win for renting as much as it is for dense cities, but it is something to consider.
+<!-- The other thing to keep in mind is the location of most rentals which are dense cities. If you don't need to own a car for your day-to-day activities that is also a place where financial savings are made. Whereas if you live in the suburbs, a car is necessity for every day which adds to the cost of living. This isn't necessarily a win for renting as much as it is for dense cities, but it is something to consider. -->
 
-My final thoughts are that if you don't pay off your mortgage and then live in that property for a while, you definitely should have rented instead. If you don't want kids, consider renting instead. If you need to move cities often for work, consider renting instead (this is probably obvious). If you want kids, then consider mortgaging for their financial future (potentially at the expense of yours). Essentially, renting can be better for the generational short term if your goal is to maximize your wealth over your life time. Mortgaging is better over the generational long term and sets your kids up for success. This goes out the window if you own multiple properties and charge rent to tenants, which I would bet makes mortgaging better. 
+<!-- My final thoughts are that if you don't pay off your mortgage and then live in that property for a while, you definitely should have rented instead. If you don't want kids, consider renting instead. If you need to move cities often for work, consider renting instead (this is probably obvious). If you want kids, then consider mortgaging for their financial future (potentially at the expense of yours). Essentially, renting can be better for the generational short term if your goal is to maximize your wealth over your life time. Mortgaging is better over the generational long term and sets your kids up for success. This goes out the window if you own multiple properties and charge rent to tenants, which I would bet makes mortgaging better.  -->
 
-Overall, this project does not aim to say "renting is better than mortgaging" or that "mortgaging is better than renting". Initially my goal was just to get a better understanding of both. Now I have a rule of thumb to make an informed decision about whether a given rental is fairly priced or whether I should just consider buying. But let's be honest, I will be renting for a while.
+<!-- Overall, this project does not aim to say "renting is better than mortgaging" or that "mortgaging is better than renting". Initially my goal was just to get a better understanding of both. Now I have a rule of thumb to make an informed decision about whether a given rental is fairly priced or whether I should just consider buying. But let's be honest, I will be renting for a while. -->
